# Astra-Box

./: .gitignore  CHANGELOG.md  HOW_TO_RUN_ENG.md  HOW_TO_RUN_RUS.md  README.md  main.py  pyproject.toml  version_0.1.0.md
AstraBox/: App.py  Astra.py  Config.py  Controller.py  DataSource.py  Kernel.py  RaceZip.py  Storage.py  Task.py  UIElement.py  WSL.py  Widgets.py  Window.py  WorkSpace.py
AstraBox/Dialogs/: PlotSettingDialog.py  PlotSettingWindows.py  Setting.py
AstraBox/Models/: AstraProfiles.py  BaseModel.py  Const.py  DataSeries.py  Distribution.py  EquModel.py  ExpModel.py  FRTCModel.py  Matrix.py  ModelFactory.py  PlainTextModel.py  RTModel.py  RTParameters.py  RaceModel.py  RadialData.py  RootModel.py  RunModel.py  SbrModel.py  Spectrum.py  SpectrumModel.py  SpectrumModel_v1.py  SpectrumModel_v2.py  TextModel.py  TimeSeries.py  TimestampFilesManager.py  TrajectoryModel.py  ZipReader.py
AstraBox/Pages/: EmptyPage.py  ExpPage.py  FRTCPage.py  InfoPanel.py  RTPage.py  RacePage.py  RayTracingPage.py  ReadMePage.py  RunAstraPage.py  SpectrumPage.py  TaskPage.py  TextPage.py
AstraBox/RaceTab/: DiffusionTabView.py  EquilibriumTabView.py  FDerivativeTabView.py  LHCDRadialPlot.py  LHCDRadialTabView.py  MaxwellTabView.py  RaceView.py  SpectrumTabView.py  SpectrumView.py  TabViewBasic.py  TrajectoryTabView.py
AstraBox/ToolBox/: ComboBox.py  DistributionPlot.py  DrivenCurrentPlot.py  ExecTimePlot.py  ImageButton.py  LHCDRadialPlot.py  MaxwellPlot.py  (+9 more)
core/: kernel.py  wsl.py
docs/: README.md
script/: pack.sh  run10.sh  run11.sh  run_astra.sh  unpack.sh
(+28 files in other folders)
