[tool.poetry]
name = "AstraBox"
version = "0.2.0"
description = "ASTRA Box"
authors = ["Alex <temper8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
pydantic = "^2.9.2"
rich = "^13.9.0"
tkinter-tooltip = "^3.1.0"
setuptools = "^75.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
