[project]
name = "AstraBox"
version = "0.2.3"
description = "ASTRA Box"
authors = [
    {name = "Alex",email = "temper8@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.9.2,<3.0.0)",
    "rich (>=13.9.0,<14.0.0)",
    "tkinter-tooltip (>=3.1.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
