[project]
name = "AstraBox"
version = "0.2.3"
description = "ASTRA Box"
authors = [{ name = "Alex", email = "temper8@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.9.2,<3.0.0)",
    "rich (>=13.9.0,<14.0.0)",
    "tkinter-tooltip (>=3.1.0,<4.0.0)",
    "f90nml>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
